--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -33,6 +33,12 @@
                     <p>
                         iygutydtsesryiujohdrtuhoj
                     </p>
+                    <ul class="social-links">
+                        <li><img class="social" src="{% static 'images/facebook.jfif' %}"></li>
+                        <li><img class="social" src="{% static 'images/instagram.jfif' %}"></li>
+                        <li><img class="social" src="{% static 'images/github.jfif' %}"></li>
+                        <li><img class="social" src="{% static 'images/linkedin.jfif' %}"></li>
+                    </ul>
                 </div>
             </div>
         </div>
