--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -34,7 +34,7 @@
                         iygutydtsesryiujohdrtuhoj
                     </p>
                     <ul class="social-links">
-                        <li><img class="social" src="{% static 'images/facebook.jfif' %}"></li>
+                        <li><a href="#"><img class="social" src="{% static 'images/facebook.jfif' %}"></a></li>
                         <li><img class="social" src="{% static 'images/instagram.jfif' %}"></li>
                         <li><img class="social" src="{% static 'images/github.jfif' %}"></li>
                         <li><img class="social" src="{% static 'images/linkedin.jfif' %}"></li>
