--- a/staticfiles/css/main.css
+++ b/staticfiles/css/main.css
@@ -1,17 +1,23 @@
 body{
-    background-color:#F8F8F8!important;
+    background-color:#F5F5F5!important;
 }
 #profile-wrapper{
     text-align: center;
 }
 #profile-pic{
-
     width: 110px;
+    object-fit: cover;
     height: 150px;
     border-radius: 50%;
-    margin-left: auto;
-    margin-right: auto:
+   
 }
+
+.profile{
+    display: flex;
+    justify-content: center;
+}
+.profile:hover
+{transform: scale(1.15)}
 ul{
     padding: 0;
     list-style-type: none;
@@ -24,6 +30,21 @@ social-links ul, li{
 .social{
     width:20px;
     height: 20px;
-
+   margin-left: 7px
+}
+.social:hover{
+    animation: rotation .5s linear;
+    transform: scale(1.9);
 
 }
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    transform: scale(1.5);
+
+    }
+    to {
+      transform: rotate(359deg);
+
+    }
+  }
